--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,100 @@
 </head>
 <body>
     <header>
+        <!-- nav section -->
+        <section class="max-w-[1173px] mx-auto my-8">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-lg font-medium">
+                      <li><a class="">Home</a></li>
+                      <li><a>About</a></li>
+                      <li><a>Destination</a></li>
+                      <li><a>Search</a></li>
+                    </ul>
+                  </div>
+                  <a class="btn btn-ghost lg:text-4xl text-2xl font-extrabold lg:font-extrabold">P-Ticket</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1 text-lg font-medium">
+                    <li><a class="">Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Destination</a></li>
+                    <li><a>Search</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end flex items-center">
+                  <a class="btn text-green-400 text-xl font-bold items-center px-6 border-lime-500">Bus <img src="images/bus-icon.png"></a>
+                </div>
+              </div>
+        </section>
 
+        <!-- banner section -->
+        <section class="mx-auto lg:max-w-[1171px] max-w-full px-4 my-8">
+          <div class="hero  h-[550px] mx-auto rounded-3xl " style="background-image: url(images/banner.png);">
+            <div class="hero-overlay bg-opacity-0 rounded-3xl"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-[742px]">
+                <h1 class="mb-5 lg:text-5xl text-3xl font-extrabold font-family: Raleway;">End-to-End Travel with <br> <span class="text-lime-500">P Paribahan</span></h1>
+                <p class="mt-4 ">Yes, you can run unit tests and view the results directly within the app. The <br> integrated testing features allow for a streamlined .</p>
+                <button class=" py-5 px-8 mt-8 rounded-xl btn-primary bg-lime-500 border-none text-black text-xl font-bold ">Buy Tickets</button>
+              </div>
+            </div>
+            </div>
+            <!-- card -->
+            <div class="flex lg:flex-row flex-col lg:mx-24 gap-6 items-center lg:absolute -mt-14">
+              <div class="flex w-[310px] px-4 py-8 gap-4 rounded-2xl  bg-white border-b-4 border-lime-500">
+                <div class="border-dashed border-2 border-lime-500"><img src="images/people.png" alt=""></div>
+                <div>
+                  <div><h1 class="text-4xl font-bold  mb-2">500K+</h1></div>
+                <div><p>Registered users</p></div>
+                </div>
+              </div>
+              <div class="flex w-[310px] px-4 py-8 gap-4 rounded-2xl  bg-white border-b-4 border-lime-500">
+               <div class="border-dashed border-2 border-lime-500"> <img src="images/ticket-cupon.png" alt=""></div>
+                <div>
+                  <div><h1 class="text-4xl font-bold  mb-2">1.7 lacks</h1></div>
+                <div><p>Tickets sold</p></div>
+                </div>
+              </div>
+              <div class="flex w-[310px] px-4 py-8 gap-4 rounded-2xl bg-white border-b-4 border-lime-500">
+                <div class="border-dashed border-2 border-lime-500"><img src="images/stoppage.png" alt=""></div>
+                <div>
+                  <div><h1 class="text-4xl font-bold mb-2">80K+</h1></div>
+                <div><p>Rental partners</p></div>
+              </div>
+              </div>
+            </div>
+        </section>
+
+        <!-- Offer section -->
+        <section class="mx-auto lg:max-w-[1171px] mt-44 max-w-full px-4 my-8">
+          <h1 class="lg:text-4xl text-2xl font-bold text-center justify-center">Best offers for you</h1>
+          <div class=" lg:flex gap-6">
+            <div class="bg-amber-500 lg:w-[573px] mt-10 lg:h-[240px] rounded-xl flex">
+              <div class="w-[55%] ">
+                <h2 class="text-4xl font-black my-8 mx-12">15% OFF <br> <span class="text-xl font-semibold">on your next purchase</span> <br> <span class="text-lg font-medium">use by January 2024</span></h2>
+              </div>
+              <div class=""><img class="h-full" src="images/cupon-devider.png" alt=""></div>
+              <div class="w-[40%] ">
+                <h1 class="text-center lg:text-3xl text-2xl font-bold mt-20 m-12">NEW15 <br> <span class="text-lg font-medium">Coupon Code</span></h1>
+              </div>
+            </div>
+
+            <div class="bg-pink-600 rounded-xl flex mt-10 lg:w-[573px] lg:h-[240px]">
+              <div class="w-[55%] ">
+                <h2 class="lg:text-4xl text-2xl font-black my-8 mx-12">20% OFF <br> <span class="text-xl font-semibold">on your next purchase</span> <br> <span class="text-lg font-medium">use by January 2024</span></h2>
+              </div>
+              <div class=""><img class="h-full" src="images/cupon-devider.png" alt=""></div>
+              <div class="w-[40%] ">
+                <h1 class="text-center lg:text-3xl text-2xl font-bold mt-20 m-10 ml-7">Couple 20 <br> <span class="text-lg font-medium">Coupon Code</span></h1>
+              </div>
+            </div>
+          </div>
+        </section>
     </header>
     <main>
 
